frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 2
  # 2 pods pour dispo
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: RollingUpdate
    # maj sans coupure
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend:1.1
          # image taggée
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 20
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 5
            # prêt = reçoit du trafic
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: frontend-cm0
              readOnly: true
              subPath: nginx.conf
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: nginx.conf
                path: nginx.conf
            name: frontend-cm0
          name: frontend-cm0
